--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Leslie Pookie Bear Marquez,</h1>
-        <h2> Will you be my Valentine?</h2>
+        <h1>Hey Leslie,</h1>
+        <h2> Will you be my Valentine? <3</h2>
         <div class="buttons">
             <button class="yes-button" onclick="handleYesClick()">Yes</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
