--- a/yes_page.html
+++ b/yes_page.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header_text">Knew you would say yes!</h1>
+        <h1 class="header_text">Knew you'd say yes!</h1>
+        <h2>btw I can see how many times you pressed no...</h2>
         <div class="gif_container">
             <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExa2hjdW5wMGlhNTNwZzd2aDl1MzZkYXBnN2NlZWNlZGt2YWNuZjBscyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/PFo2HrqCjC0bm/giphy.gif">
         </div>
